--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ php:
   - 5.3
   - 5.6
 
+cache:
+  - composer
+  - $HOME/.composer/cache
+
 env:
   global:
     - WP_CLI_BIN_DIR=/tmp/wp-cli-phar
