Generate Using section for package readme based on package docs

--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,12 @@
     "require": {},
     "require-dev": {
         "behat/behat": "~2.5"
+    },
+    "extras": {
+        "commands": [
+            "scaffold package",
+            "scaffold package-tests",
+            "scaffold package-readme"
+        ]
     }
 }
