--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,18 @@
 {
     "name": "wp-cli/scaffold-package-command",
     "description": "Scaffold WP-CLI commands with functional tests",
+    "homepage": "https://github.com/wp-cli/scaffold-package-command",
+    "support": {
+        "issues": "https://github.com/wp-cli/scaffold-package-command/issues"
+    },
     "license": "MIT",
-    "authors": [],
+    "authors": [
+        {
+            "name": "Daniel Bachhuber",
+            "email": "daniel@runcommand.io",
+            "homepage": "https://runcommand.io"
+        }
+    ],
     "minimum-stability": "dev",
     "autoload": {
         "files": [ "command.php" ]
