add composer validation to build

--- a/circle.yml
+++ b/circle.yml
@@ -10,6 +10,7 @@ dependencies:
 
 test:
   pre:
+    - composer validate --strict
     - bash bin/install-package-tests.sh
   override:
     - ./vendor/bin/behat --strict
