--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ php:
   - 5.3
   - 5.6
 
+matrix:
+  include:
+    - env: WP_VERSION=trunk
+    - env: WP_VERSION=latest
+
 cache:
   - composer
   - $HOME/.composer/cache
