--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,9 @@ php:
   - 5.3
   - 5.6
 
-matrix:
-  include:
-    - env: WP_VERSION=trunk
-    - env: WP_VERSION=latest
+env:
+  - WP_VERSION=latest
+  - WP_VERSION=trunk
 
 cache:
   - composer
