--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,6 @@ php:
   - 5.3
   - 5.6
 
-env:
-  - WP_VERSION=latest
-  - WP_VERSION=trunk
-
 cache:
   - composer
   - $HOME/.composer/cache
@@ -26,6 +22,9 @@ cache:
 env:
   global:
     - WP_CLI_BIN_DIR=/tmp/wp-cli-phar
+  matrix:
+    - WP_VERSION=latest
+    - WP_VERSION=trunk
 
 before_script:
   - composer validate
