--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,11 @@ machine:
 dependencies:
   cache_directories:
     - ~/.composer/cache
+  pre:
+    # Set the PHP timezone so that Behat does not fail.
+    - echo "date.timezone = 'US/Central'" > /opt/circleci/php/$(phpenv global)/etc/conf.d/wp-cli-timezone.ini
+    # Disable xdebug, which makes Composer slower.
+    - echo ""  > /opt/circleci/php/$(phpenv global)/etc/conf.d/xdebug.ini
 
 test:
   pre:
