--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ matrix:
       env: WP_VERSION=latest
 
 before_script:
+  - phpenv config-rm xdebug.ini
   - composer validate
   - bash bin/install-package-tests.sh
 
