--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ cache:
 env:
   global:
     - PATH="$HOME/.composer/vendor/bin:$PATH"
-    - WP_CLI_BIN_DIR=$HOME/.composer/vendor/bin
+    - WP_CLI_BIN_DIR="$HOME/.composer/vendor/bin"
 
 matrix:
   include:
