--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ matrix:
 
 install:
   - phpenv config-rm xdebug.ini
-  - composer global require wp-cli/wp-cli:dev-master --dev
+  - composer global require wp-cli/wp-cli:dev-master
+  - composer global require behat/behat:~2.5
   - composer install --no-dev
   - bash bin/install-package-tests.sh
 
