--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,9 @@
     "autoload": {
         "files": [ "command.php" ]
     },
-    "require": {},
+    "require": {
+        "wp-cli/wp-cli": "~1.0.0"
+    },
     "require-dev": {
         "behat/behat": "~2.5"
     },
