--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
         "files": [ "command.php" ]
     },
     "require": {
-        "wp-cli/wp-cli": "~1.0.0"
+        "wp-cli/wp-cli": "^1.0.0"
     },
     "require-dev": {
         "behat/behat": "~2.5"
