--- a/circle.yml
+++ b/circle.yml
@@ -7,7 +7,7 @@ machine:
 
 dependencies:
   cache_directories:
-    - $HOME/.composer/cache
+    - ~/.composer/cache
   pre:
     # Set the PHP timezone so that Behat does not fail.
     - echo "date.timezone = 'US/Central'" > /opt/circleci/php/$(phpenv global)/etc/conf.d/wp-cli-timezone.ini
