--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         }
     ],
     "minimum-stability": "dev",
+    "prefer-stable": true,
     "autoload": {
         "psr-4": { "WP_CLI\\": "src" },
         "files": [ "scaffold-package-command.php" ]
