--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "files": [ "scaffold-package-command.php" ]
     },
     "require": {
-        "wp-cli/wp-cli": "^1.0.0"
+        "wp-cli/wp-cli": "*"
     },
     "require-dev": {
         "behat/behat": "~2.5"
