Introduce `wp scaffold package-github` to scaffold GitHub templates

--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "commands": [
             "scaffold package",
             "scaffold package-tests",
-            "scaffold package-readme"
+            "scaffold package-readme",
+            "scaffold package-github"
         ]
     }
 }
