--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,13 @@ matrix:
 
 before_install:
   - phpenv config-rm xdebug.ini
+  - |
+    # Remove Xdebug for a huge performance increase:
+    if [ -f ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/xdebug.ini ]; then
+      phpenv config-rm xdebug.ini
+    else
+      echo "xdebug.ini does not exist"
+    fi
 
 install:
   - composer require wp-cli/wp-cli:dev-master
