--- a/circle.yml
+++ b/circle.yml
@@ -17,6 +17,9 @@ jobs:
         composer require wp-cli/wp-cli:dev-master
         composer install
     - run: |
+        echo 'export PATH=$HOME/wp-cli/package-tests/vendor/bin:$PATH' >> $BASH_ENV
+        source $BASH_ENV
+    - run: |
         composer validate
         WP_VERSION=latest bash bin/test.sh
         rm -rf '/tmp/wp-cli-test core-download-cache'
