--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "wp-cli/wp-cli": "^2",
+        "wp-cli/package-command": "^2",
         "wp-cli/scaffold-command": "^2"
     },
     "require-dev": {
