--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -45,7 +45,7 @@
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
 			<property name="prefixes" type="array">
-				<element value="WP_CLI\ScaffoldPackage"/><!-- Namespaces. -->
+				<element value="WP_CLI"/><!-- Namespaces. -->
 				<element value="wpcli_scaffold_package"/><!-- Global variables and such. -->
 			</property>
 		</properties>
