--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,11 @@
-sudo: false
-dist: trusty
+os: linux
+dist: xenial
 
 language: php
+php: 7.4
+
+services:
+  - mysql
 
 notifications:
   email:
@@ -21,24 +25,6 @@ env:
     - PATH="$TRAVIS_BUILD_DIR/vendor/bin:$PATH"
     - WP_CLI_BIN_DIR="$TRAVIS_BUILD_DIR/vendor/bin"
 
-matrix:
-  include:
-    - php: 7.2
-      env: WP_VERSION=latest
-    - php: 7.1
-      env: WP_VERSION=latest
-    - php: 7.0
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=latest
-    - php: 5.6
-      env: WP_VERSION=3.7.11
-    - php: 5.6
-      env: WP_VERSION=trunk
-    - php: 5.3
-      dist: precise
-      env: WP_VERSION=latest
-
 before_install:
   - |
     # Remove Xdebug for a huge performance increase:
@@ -50,14 +36,40 @@ before_install:
   - |
     # Raise PHP memory limit to 2048MB
     echo 'memory_limit = 2048M' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
-
-install:
-  - composer require wp-cli/wp-cli:dev-master
-  - composer install
-  - bash bin/install-package-tests.sh
-
-before_script:
   - composer validate
 
+install:
+  - composer install
+  - composer prepare-tests
+
 script:
-  - bash bin/test.sh
+  - composer phpunit
+  - composer behat || composer behat-rerun
+
+jobs:
+  include:
+    - stage: test
+      php: 7.4
+      env: WP_VERSION=latest
+    - stage: test
+      php: 7.3
+      env: WP_VERSION=latest
+    - stage: test
+      php: 7.2
+      env: WP_VERSION=latest
+    - stage: test
+      php: 7.1
+      env: WP_VERSION=latest
+    - stage: test
+      php: 7.0
+      env: WP_VERSION=latest
+    - stage: test
+      php: 5.6
+      env: WP_VERSION=latest
+    - stage: test
+      php: 5.6
+      env: WP_VERSION=3.7.11
+      dist: trusty
+    - stage: test
+      php: 5.6
+      env: WP_VERSION=trunk
