--- a/circle.yml
+++ b/circle.yml
@@ -18,12 +18,12 @@ jobs:
     - run: |
         composer require wp-cli/wp-cli:dev-master
         composer install
-        bash bin/install-package-tests.sh
+        composer prepare-tests
     - run: |
         echo 'export PATH=$HOME/wp-cli/package-tests/vendor/bin:$PATH' >> $BASH_ENV
         source $BASH_ENV
     - run: |
         composer validate
-        WP_VERSION=latest bash bin/test.sh
+        WP_VERSION=latest composer test
         rm -rf '/tmp/wp-cli-test core-download-cache'
-        WP_VERSION=trunk bash bin/test.sh
+        WP_VERSION=trunk composer test
