--- a/composer.json
+++ b/composer.json
@@ -26,9 +26,9 @@
     },
     "require": {
         "php": "^5.6 || ^7 || ^8",
-        "wp-cli/wp-cli": "^2.11",
         "wp-cli/package-command": "^2",
-        "wp-cli/scaffold-command": "^2"
+        "wp-cli/scaffold-command": "^2",
+        "wp-cli/wp-cli": "^2.12"
     },
     "require-dev": {
         "wp-cli/wp-cli-tests": "^4"
